# earthquake-rust

./: Cargo.toml  README.md
src/: chunk.rs  lib.rs  movie.rs
src/io/: chunk.rs  mod.rs  value.rs
